# FitLensBLE

./: Cargo.toml  full_commit_main.rs  memory.x  temp.rs
.cargo/: config.toml
src/: ble.rs  data.rs  hr.rs  main.rs  power.rs  spi.rs
testing/: Cargo.toml  Makefile
testing/src/: main.rs
