[package]
name = "FitLensBLE"
version = "0.1.0"
edition = "2024"

[dependencies]


cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7"

panic-halt = "0.2.0"

embassy-futures = "0.1.2"
embassy-sync = "0.7.2"

embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
] }

embassy-time = { version = "0.5.0" }

embassy-nrf = { version = "0.9.0", features = [
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
] }