[package]
name = "FitLensBLE"
version = "0.1.0"
edition = "2024"

[dependencies]


cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }

panic-halt = "0.2.0"

embassy-futures = "0.1.2"
embassy-sync = "0.7.2"

defmt = "1.0.1"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
] }

embassy-time = { version = "0.5.0" }

embassy-nrf = { version = "0.9.0", features = [
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
] }

# nrf-softdevice = { version = "0.1", features = ["nrf52840", "s140", "ble-central"] }
# nrf-softdevice-s140 = "0.1"