[package]
name = "FitLensBLE"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"

panic-halt = "0.2.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embassy-futures = "0.1.1"
embassy-sync = { version = "0.7", features = ["defmt"] }

defmt = "1.0"
defmt-rtt = "1.0"

embassy-executor = { version = "0.9", default-features = false, features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.9", default-features = false, features = ["defmt", "time-driver-rtc1", "gpiote", "unstable-pac", "rt", "nrf52832", "nfc-pins-as-gpio"] }
embassy-embedded-hal = { version = "0.5", default-features = false }

trouble-host = { git = "https://github.com/embassy-rs/trouble.git", features = ["derive", "scan", "gatt", "defmt"] }
trouble-example-apps = { git = "https://github.com/embassy-rs/trouble.git", features = ["defmt"] }

bt-hci = { version = "0.8", default-features = false, features = ["defmt"] }

nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "df7e3b4f363275e2c9ad42005758cf3eb8a798e0", default-features = false, features = ["critical-section-impl", "nrf52832", "defmt"] }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "df7e3b4f363275e2c9ad42005758cf3eb8a798e0", default-features = false, features = ["nrf52832", "defmt", "central", "peripheral"] }

static_cell = "2"
heapless = "0.9"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "ed8d4277cd8165c8b280ccbb1501534056691b6a" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "ed8d4277cd8165c8b280ccbb1501534056691b6a" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "ed8d4277cd8165c8b280ccbb1501534056691b6a" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "ed8d4277cd8165c8b280ccbb1501534056691b6a" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "ed8d4277cd8165c8b280ccbb1501534056691b6a" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "ed8d4277cd8165c8b280ccbb1501534056691b6a" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "ed8d4277cd8165c8b280ccbb1501534056691b6a" }
embassy-hal-internal = { git = "https://github.com/embassy-rs/embassy.git", rev = "ed8d4277cd8165c8b280ccbb1501534056691b6a" }
